# nvdb-rs

./: Cargo.toml  README.md
src/: lib.rs  metrics.rs
src/index/: knn.rs
src/storage/: segment.rs
tests/: index.rs  metrics.rs  segment.rs
