[package]
name = "nvdb-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
crc32fast = "1"
kvs = { version = "0.1.0", path = "../rust-kv" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
assert_cmd = "0.11.0"
tempfile = "3.0.7"
